package games.HangManGame.hangman;

public class HangMan {
    private final int MAX_ATTEMPTS = 8;
    public int getAmountOfPlayers() {
        return 10;
    }

}
