package games.game;

import games.game.HangManGame.HangManPlayer;

public interface GamePlayer extends HangManPlayer {
   public void result();
}
