package games.game.HangManGame;

public interface WordGiverable {
    public String giveWord();
}
